manifest/selenium-py.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selenium-py
spec:
  containers:
    - image: python:3-alpine
      imagePullPolicy: IfNotPresent
      name: python
      command:
        - /bin/sh
        - -ec
        - |
          source /root/work/install.sh
          python /root/work/${CASE_NAME}.py
      volumeMounts:
        - mountPath: /root/work
          name: script
  restartPolicy: Never
  volumes:
    - name: script
      configMap:
        name: script
