manifest/selenium-chrome-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-standalone-chrome
  namespace: default
spec:
  selector:
    matchLabels:
      app: selenium-standalone-chrome
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-standalone-chrome
    spec:
      containers:
        - name: selenium-standalone-chrome
          image: selenium/standalone-chrome-debug:latest
          ports:
            - containerPort: 4444
            - containerPort: 5900
          volumeMounts:
            - mountPath: /dev/shm
              name: cache-volume
            - mountPath: /tmp/sample/area_trend_data
              name: area-trend-data
            - mountPath: /tmp/sample/airline_data
              name: airline-data
            - mountPath: /tmp/sample/go_sales_data
              name: go-sales-data
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 2048Mi
          name: cache-volume
        - name: area-trend-data
          configMap:
            name: area-trend-data
        - name: airline-data
          configMap:
            name: airline-data
        - name: go-sales-data
          configMap:
            name: go-sales
---
apiVersion: v1
kind: Service
metadata:
  name: selenium
  namespace: default
  labels:
    app: selenium-standalone-chrome
spec:
  type: NodePort
  ports:
    - port: 4444
      protocol: TCP
      name: selnium
    - port: 5900
      protocol: TCP
      name: vnc
  selector:
    app: selenium-standalone-chrome
---
